REST controllers, mapper toModel for entities

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
